# card-arbitrage

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
pipeline/: __init__.py  cli.py  config.py  render.py  scout.py  valuation.py
pipeline/sources/: __init__.py  ebay.py  pokemon_tcg.py  pricecharting.py  tcgplayer.py
tests/: test_pokemon_tcg.py  test_scout.py  test_valuation.py
